:P\n1.Remove buildSrc, cleanup build.gradle\n2. update Java to 95, update gradle to 2.4, update readme.md\n3. add opts in gradlew(.bat), increase speed compile 0_o